# inya-cli

./: pyproject.toml
inya_cli/: cli.py
tests/: test_inya_stage.py
