[tool.poetry]
name = "inya-cli"
version = "0.1.1"
description = ""
authors = ["Lars Viklund <zao@zao.se>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
zstandard = "^0.19.0"
pydantic = "^1.9.1"
ndjson = "^0.3.1"
atomicwrites = "^1.4.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.poetry.scripts]
inya_stage = "inya_cli.cli:stage"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
